--- a/Music-player/music-player.html
+++ b/Music-player/music-player.html
@@ -36,8 +36,10 @@
           class="card-body items-center text-center h-[500px] flex justify-end"
         >
           <div class="mt-2">
-            <h2 class="card-title font-bold text-2xl">Baarishien-Anuv-Jain</h2>
-            <p class="font-semibold">Anuv Jain</p>
+            <h2 id="title" class="card-title font-bold text-2xl">
+              Baarishien-Anuv-Jain
+            </h2>
+            <p id="artist" class="font-semibold">Anuv Jain</p>
           </div>
           <div>
             <audio src="audio/Baarishien-Anuv-Jain.mp3"></audio>
