--- a/Music-player/music-player.html
+++ b/Music-player/music-player.html
@@ -22,7 +22,9 @@
       }
     </style>
   </head>
-  <body class="h-screen bg-[#C1C7CD] flex items-center justify-center">
+  <body
+    class="lg:h-screen md:pt-14 bg-[#C1C7CD] flex items-center justify-center"
+  >
     <div class="card w-96 bg-base-100 shadow-xl bg-white relative">
       <div class="relative">
         <figure class="px-10 pt-10">
@@ -36,10 +38,11 @@
           class="card-body items-center text-center h-[500px] flex justify-end"
         >
           <div class="mt-2">
-            <h2 id="title" class="card-title font-bold text-2xl">
-              Baarishien-Anuv-Jain
-            </h2>
-            <p id="artist" class="font-semibold">Anuv Jain</p>
+            <h2
+              id="title"
+              class="card-title font-bold text-2xl flex justify-center"
+            ></h2>
+            <p id="artist" class="font-semibold"></p>
           </div>
           <div>
             <audio src="audio/Baarishien-Anuv-Jain.mp3"></audio>
@@ -54,8 +57,13 @@
           </div>
 
           <!-- duration length  -->
-          <div class="mt-3">
-            <progress class="progress w-80 h-2" value="70" max="100"></progress>
+          <div id="progress__container" class="mt-3">
+            <progress
+              id="progress"
+              class="progress w-80 h-2"
+              value="0"
+              max="100"
+            ></progress>
           </div>
 
           <!-- button  -->
