added dynamic current time & duration

--- a/Music-player/music-player.html
+++ b/Music-player/music-player.html
@@ -51,8 +51,8 @@
           <!-- duration  -->
           <div class="w-full relative">
             <div class="flex justify-between w-full absolute">
-              <p class="flex justify-start">0.00</p>
-              <p class="flex justify-end">2.17</p>
+              <p id="current__time" class="flex justify-start">0.00</p>
+              <p id="duration" class="flex justify-end">0.00</p>
             </div>
           </div>
 
