--- a/Music-player/music-player.html
+++ b/Music-player/music-player.html
@@ -60,7 +60,7 @@
           <div id="progress__container" class="mt-3">
             <progress
               id="progress"
-              class="progress w-80 h-2"
+              class="progress w-80 h-2 cursor-pointer"
               value="0"
               max="100"
             ></progress>
