added coustom countdown project file

--- a/Music-player/index.html
+++ b/Music-player/index.html
@@ -22,9 +22,7 @@
       }
     </style>
   </head>
-  <body
-    class="lg:h-screen md:pt-14 bg-[#C1C7CD] flex items-center justify-center"
-  >
+  <body class="h-screen sm:pt-14 bg-[#C1C7CD] flex items-center justify-center">
     <div class="card w-96 bg-base-100 shadow-xl bg-white relative">
       <div class="relative">
         <figure class="px-10 pt-10">
